updating with latest from chp5

--- a/0504 - Parallelizing.ipynb
+++ b/0504 - Parallelizing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -11,12 +11,13 @@
     "import requests\n",
     "from multiprocessing import Pool\n",
     "from ConfigParser import ConfigParser\n",
-    "from urllib import quote_plus"
+    "from urllib import quote_plus\n",
+    "import logging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -26,6 +27,7 @@
     "    \"\"\" Pulls upcoming forecast based on address. \"\"\"\n",
     "    config, address = args\n",
     "    lat, lon = get_lat_long(config, address)\n",
+    "    logging.debug('Have lat and long for %s', address)\n",
     "    resp = requests.get('http://api.openweathermap.org/data/2.5/forecast',\n",
     "                        params={'lat': lat, 'lon': lon, \n",
     "                                'appid': config.get('openweather', 'api_key'),\n",
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -61,6 +63,7 @@
     "    qs_dict = {'address': quote_plus(address),\n",
     "               'key': config.get('google', 'api_key'),\n",
     "    }\n",
+    "    logging.debug('Requesting weather data from google for %s', address)\n",
     "    resp = requests.get('https://maps.googleapis.com/maps/api/geocode/json', params=qs_dict)\n",
     "    try:\n",
     "        lat, lon = resp.json().get('results')[0].get('geometry').get('location').values()\n",
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -80,60 +83,40 @@
     "def get_city_forecasts(addresses): \n",
     "    \"\"\" Returns forecasts when given a list of string addresses based on Google geocoding and openweather data. \"\"\"\n",
     "    config = get_config()\n",
-    "    pool = Pool(processes=4) \n",
+    "    pool = Pool(processes=2) \n",
     "    return pool.map(upcoming_forecast, [(config, addy) for addy in addresses])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "my_weather = get_city_forecasts(['Los Angeles, CA', 'New York, NY', 'Berlin, Germany'])"
+    "my_weather = get_city_forecasts(['Los Angeles, CA', 'New York, NY', \n",
+    "                                 'Berlin, Germany'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(my_weather)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Los Angeles, CA\n",
-      "New York, NY\n",
-      "Berlin, Germany\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for item in my_weather:\n",
     "    print item[0]"
@@ -165,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
