updating with final chapter

--- a/0502 - Writing Performent Code.ipynb
+++ b/0502 - Writing Performent Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -14,35 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('data/berlin_weather_oldest.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(117208, 21)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.shape"
+    "df = pd.read_csv('data/berlin_weather_oldest.csv')"
    ]
   },
   {
@@ -53,10 +31,32 @@
    },
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "(117208, 21)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 590 ms per loop\n"
+      "1 loop, best of 3: 591 ms per loop\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 409 ms per loop\n"
+      "1 loop, best of 3: 404 ms per loop\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -130,18 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%load_ext memory_profiler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -150,12 +139,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 197.54 MiB, increment: 52.71 MiB\n"
+      " "
      ]
     }
    ],
    "source": [
-    "%memit df.applymap(lambda x: np.nan if x == -9999 else x)"
+    "%prun df.applymap(lambda x: np.nan if x == -9999 else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext memory_profiler"
    ]
   },
   {
@@ -169,7 +169,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 250.32 MiB, increment: 90.06 MiB\n"
+      "peak memory: 203.55 MiB, increment: 0.70 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "%memit df.applymap(lambda x: np.nan if x == -9999 else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 252.67 MiB, increment: 51.58 MiB\n"
      ]
     }
    ],
@@ -179,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -188,7 +207,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 148.59 MiB, increment: 0.05 MiB\n"
+      "peak memory: 218.68 MiB, increment: 2.50 MiB\n"
      ]
     }
    ],
