updating with example production config and performant python update

--- a/actual_video_notebooks/Writing Performant Python.ipynb
+++ b/actual_video_notebooks/Writing Performant Python.ipynb
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 1.65 s per loop\n"
+      "1 loop, best of 3: 1.67 s per loop\n"
      ]
     }
    ],
@@ -285,7 +285,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 1.33 s per loop\n"
+      "1 loop, best of 3: 1.36 s per loop\n"
      ]
     }
    ],
@@ -303,13 +303,24 @@
    "source": [
     "def iter_columns(df):\n",
     "    for col in df.columns:\n",
-    "        df[col] = df[col].map(lambda x: x if x!= -9999 else np.nan)\n",
+    "        df[col] = df[col].map(lambda x: x if x != -9999 else np.nan)\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "new_df = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -318,23 +329,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 1.67 s per loop\n"
+      "1 loop, best of 3: 1.88 s per loop\n"
      ]
     }
    ],
    "source": [
-    "%timeit iter_columns(df.copy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%load_ext memory_profiler"
+    "%timeit iter_columns(new_df)"
    ]
   },
   {
@@ -348,31 +348,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 159.33 MiB, increment: 34.59 MiB\n"
+      " "
      ]
     }
    ],
    "source": [
-    "%memit df.applymap(lambda x: np.nan if x == -9999 else x)"
+    "%prun df.applymap(lambda x: np.nan if x == -9999 else x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 206.52 MiB, increment: 59.75 MiB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%memit df.apply(return_row)"
+    "%load_ext memory_profiler"
    ]
   },
   {
@@ -386,12 +378,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 193.59 MiB, increment: 55.13 MiB\n"
+      "peak memory: 198.34 MiB, increment: 39.47 MiB\n"
      ]
     }
    ],
    "source": [
-    "%memit iter_columns(df.copy())"
+    "%memit df.applymap(lambda x: np.nan if x == -9999 else x)"
    ]
   },
   {
