--- a/0601 - Natural Language Processing.ipynb
+++ b/0601 - Natural Language Processing.ipynb
@@ -1401,7 +1401,7 @@
     }
    ],
    "source": [
-    "np.mean(counter.values())"
+    "np.mean([x for x in counter.values()])"
    ]
   },
   {
@@ -1423,7 +1423,7 @@
     }
    ],
    "source": [
-    "np.median(counter.values())"
+    "np.median([x for x in counter.values()])"
    ]
   },
   {
@@ -1445,7 +1445,7 @@
     }
    ],
    "source": [
-    "np.max(counter.values())"
+    "np.max([x for x in counter.values()])"
    ]
   },
   {
@@ -1467,7 +1467,7 @@
     }
    ],
    "source": [
-    "np.min(counter.values())"
+    "np.min([x for x in counter.values()])"
    ]
   },
   {
@@ -1482,21 +1482,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
