updating with final videos

--- a/actual_video_notebooks/Natural Language Processing.ipynb
+++ b/actual_video_notebooks/Natural Language Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -33,88 +33,90 @@
       "    Downloading collection u'book'\n",
       "       | \n",
       "       | Downloading package abc to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/abc.zip.\n",
+      "       |   Package abc is already up-to-date!\n",
       "       | Downloading package brown to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/brown.zip.\n",
+      "       |   Package brown is already up-to-date!\n",
       "       | Downloading package chat80 to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/chat80.zip.\n",
+      "       |   Package chat80 is already up-to-date!\n",
       "       | Downloading package cmudict to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/cmudict.zip.\n",
+      "       |   Package cmudict is already up-to-date!\n",
       "       | Downloading package conll2000 to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/conll2000.zip.\n",
+      "       |   Package conll2000 is already up-to-date!\n",
       "       | Downloading package conll2002 to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/conll2002.zip.\n",
+      "       |   Package conll2002 is already up-to-date!\n",
       "       | Downloading package dependency_treebank to\n",
       "       |     /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/dependency_treebank.zip.\n",
+      "       |   Package dependency_treebank is already up-to-date!\n",
       "       | Downloading package genesis to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/genesis.zip.\n",
+      "       |   Package genesis is already up-to-date!\n",
       "       | Downloading package gutenberg to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/gutenberg.zip.\n",
+      "       |   Package gutenberg is already up-to-date!\n",
       "       | Downloading package ieer to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/ieer.zip.\n",
+      "       |   Package ieer is already up-to-date!\n",
       "       | Downloading package inaugural to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/inaugural.zip.\n",
+      "       |   Package inaugural is already up-to-date!\n",
       "       | Downloading package movie_reviews to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/movie_reviews.zip.\n",
+      "       |   Package movie_reviews is already up-to-date!\n",
       "       | Downloading package nps_chat to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/nps_chat.zip.\n",
+      "       |   Package nps_chat is already up-to-date!\n",
       "       | Downloading package names to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/names.zip.\n",
+      "       |   Package names is already up-to-date!\n",
       "       | Downloading package ppattach to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/ppattach.zip.\n",
+      "       |   Package ppattach is already up-to-date!\n",
       "       | Downloading package reuters to /Users/kjam/nltk_data...\n",
+      "       |   Package reuters is already up-to-date!\n",
       "       | Downloading package senseval to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/senseval.zip.\n",
+      "       |   Package senseval is already up-to-date!\n",
       "       | Downloading package state_union to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/state_union.zip.\n",
+      "       |   Package state_union is already up-to-date!\n",
       "       | Downloading package stopwords to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/stopwords.zip.\n",
+      "       |   Package stopwords is already up-to-date!\n",
       "       | Downloading package swadesh to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/swadesh.zip.\n",
+      "       |   Package swadesh is already up-to-date!\n",
       "       | Downloading package timit to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/timit.zip.\n",
+      "       |   Package timit is already up-to-date!\n",
       "       | Downloading package treebank to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/treebank.zip.\n",
+      "       |   Package treebank is already up-to-date!\n",
       "       | Downloading package toolbox to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/toolbox.zip.\n",
+      "       |   Package toolbox is already up-to-date!\n",
       "       | Downloading package udhr to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/udhr.zip.\n",
+      "       |   Package udhr is already up-to-date!\n",
       "       | Downloading package udhr2 to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/udhr2.zip.\n",
+      "       |   Package udhr2 is already up-to-date!\n",
       "       | Downloading package unicode_samples to\n",
       "       |     /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/unicode_samples.zip.\n",
+      "       |   Package unicode_samples is already up-to-date!\n",
       "       | Downloading package webtext to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/webtext.zip.\n",
+      "       |   Package webtext is already up-to-date!\n",
       "       | Downloading package wordnet to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/wordnet.zip.\n",
+      "       |   Package wordnet is already up-to-date!\n",
       "       | Downloading package wordnet_ic to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/wordnet_ic.zip.\n",
+      "       |   Package wordnet_ic is already up-to-date!\n",
       "       | Downloading package words to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/words.zip.\n",
+      "       |   Package words is already up-to-date!\n",
       "       | Downloading package maxent_treebank_pos_tagger to\n",
       "       |     /Users/kjam/nltk_data...\n",
-      "       |   Unzipping taggers/maxent_treebank_pos_tagger.zip.\n",
+      "       |   Package maxent_treebank_pos_tagger is already up-to-date!\n",
       "       | Downloading package maxent_ne_chunker to\n",
       "       |     /Users/kjam/nltk_data...\n",
-      "       |   Unzipping chunkers/maxent_ne_chunker.zip.\n",
+      "       |   Package maxent_ne_chunker is already up-to-date!\n",
       "       | Downloading package universal_tagset to\n",
       "       |     /Users/kjam/nltk_data...\n",
-      "       |   Unzipping taggers/universal_tagset.zip.\n",
+      "       |   Package universal_tagset is already up-to-date!\n",
       "       | Downloading package punkt to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping tokenizers/punkt.zip.\n",
+      "       |   Package punkt is already up-to-date!\n",
       "       | Downloading package book_grammars to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping grammars/book_grammars.zip.\n",
+      "       |   Package book_grammars is already up-to-date!\n",
       "       | Downloading package city_database to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping corpora/city_database.zip.\n",
+      "       |   Package city_database is already up-to-date!\n",
       "       | Downloading package tagsets to /Users/kjam/nltk_data...\n",
-      "       |   Unzipping help/tagsets.zip.\n",
+      "       |   Package tagsets is already up-to-date!\n",
       "       | Downloading package panlex_swadesh to\n",
       "       |     /Users/kjam/nltk_data...\n",
+      "       |   Package panlex_swadesh is already up-to-date!\n",
       "       | Downloading package averaged_perceptron_tagger to\n",
       "       |     /Users/kjam/nltk_data...\n",
-      "       |   Unzipping taggers/averaged_perceptron_tagger.zip.\n",
+      "       |   Package averaged_perceptron_tagger is already up-to-date!\n",
       "       | \n",
       "     Done downloading collection book\n",
       "\n",
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -305,7 +307,7 @@
        " u'wouldn']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -327,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -338,7 +340,7 @@
        "[[u'The', u'Fulton', u'County', u'Grand', u'Jury', u'said', u'Friday', u'an', u'investigation', u'of', u\"Atlanta's\", u'recent', u'primary', u'election', u'produced', u'``', u'no', u'evidence', u\"''\", u'that', u'any', u'irregularities', u'took', u'place', u'.'], [u'The', u'jury', u'further', u'said', u'in', u'term-end', u'presentments', u'that', u'the', u'City', u'Executive', u'Committee', u',', u'which', u'had', u'over-all', u'charge', u'of', u'the', u'election', u',', u'``', u'deserves', u'the', u'praise', u'and', u'thanks', u'of', u'the', u'City', u'of', u'Atlanta', u\"''\", u'for', u'the', u'manner', u'in', u'which', u'the', u'election', u'was', u'conducted', u'.'], ...]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,19 +351,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "words = [word for word in brown.words(categories=['news', 'editorial'])\n",
-    "        if word not in stopwords.words('english')]"
+    "words = [word for word in brown.words(categories=['news', 'editorial']) if word.lower() not in\n",
+    "        stopwords.words('english')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -372,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -383,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -394,7 +396,6 @@
        "Counter({u'four': 83,\n",
        "         u'woods': 4,\n",
        "         u'hanging': 2,\n",
-       "         u'Until': 9,\n",
        "         u'aggression': 2,\n",
        "         u'Foundation': 3,\n",
        "         u'Spectators': 1,\n",
@@ -422,7 +423,6 @@
        "         u'Less': 3,\n",
        "         u'wooden': 1,\n",
        "         u'Loeb': 1,\n",
-       "         u'Does': 15,\n",
        "         u'deferments': 1,\n",
        "         u'Paul': 9,\n",
        "         u'shows': 11,\n",
@@ -531,7 +531,7 @@
        "         u'Ludwig': 3,\n",
        "         u'Commies': 1,\n",
        "         u'welcomes': 1,\n",
-       "         u'His': 55,\n",
+       "         u\"Geraghty's\": 3,\n",
        "         u'Hit': 1,\n",
        "         u'fit': 5,\n",
        "         u'heretofore': 2,\n",
@@ -626,14 +626,14 @@
        "         u'Abraham': 1,\n",
        "         u\"Lanin's\": 1,\n",
        "         u'dozen': 9,\n",
-       "         u'Then': 35,\n",
+       "         u'affairs': 13,\n",
        "         u'wholesome': 1,\n",
        "         u'push-ups': 1,\n",
        "         u'bleachers': 2,\n",
        "         u'Myron': 1,\n",
        "         u'recommended': 10,\n",
        "         u'amusing': 1,\n",
-       "         u'They': 98,\n",
+       "         u'doors': 7,\n",
        "         u'Ask': 1,\n",
        "         u'grips': 3,\n",
        "         u'Missionary': 1,\n",
@@ -791,7 +791,7 @@
        "         u'Subsequent': 1,\n",
        "         u'Thant': 5,\n",
        "         u'Bricker': 1,\n",
-       "         u'previous': 15,\n",
+       "         u'Happy': 3,\n",
        "         u'ham': 2,\n",
        "         u'duffer': 1,\n",
        "         u'equipment': 33,\n",
@@ -833,7 +833,6 @@
        "         u'culpas': 1,\n",
        "         u'captive': 2,\n",
        "         u'3,325': 1,\n",
-       "         u'Between': 1,\n",
        "         u'52nd': 1,\n",
        "         u'Syrians': 1,\n",
        "         u'enemies': 4,\n",
@@ -978,14 +977,13 @@
        "         u'ground': 15,\n",
        "         u'boost': 9,\n",
        "         u'Lopez': 1,\n",
-       "         u'Me': 4,\n",
+       "         u'draftee': 1,\n",
        "         u'drafted': 2,\n",
        "         u'jury': 44,\n",
        "         u'Mi': 1,\n",
        "         u'understanding': 11,\n",
        "         u'address': 14,\n",
        "         u'$80': 1,\n",
-       "         u'My': 15,\n",
        "         u'momentous': 3,\n",
        "         u'Webb': 1,\n",
        "         u'passengers': 9,\n",
@@ -1014,7 +1012,7 @@
        "         u'scope': 1,\n",
        "         u'liberalizing': 1,\n",
        "         u'theoretical': 1,\n",
-       "         u'Those': 9,\n",
+       "         u'prosecutor': 2,\n",
        "         u\"Nam's\": 1,\n",
        "         u'Klaus': 1,\n",
        "         u'Mortar': 1,\n",
@@ -1249,7 +1247,6 @@
        "         u'mechanization': 2,\n",
        "         u'awaiting': 1,\n",
        "         u'Signal': 2,\n",
-       "         u'Having': 4,\n",
        "         u\"Government's\": 2,\n",
        "         u'resource': 2,\n",
        "         u'Thereafter': 1,\n",
@@ -1267,7 +1264,7 @@
        "         u'intoxicating': 1,\n",
        "         u'Kan.': 2,\n",
        "         u'refresher': 1,\n",
-       "         u'That': 45,\n",
+       "         u'compounds': 1,\n",
        "         u'alarming': 1,\n",
        "         u'sites': 4,\n",
        "         u'sponsorship': 2,\n",
@@ -1391,10 +1388,15 @@
        "         u'ebullient': 1,\n",
        "         u'aspects': 6,\n",
        "         u'around': 50,\n",
+       "         u'rejoin': 1,\n",
+       "         u'sums': 3,\n",
+       "         u'mosaic-like': 1,\n",
+       "         u'gestures': 1,\n",
+       "         u'Verstandig': 1,\n",
        "         ...})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -1415,7 +1417,6 @@
       "text/plain": [
        "[(u',', 7954),\n",
        " (u'.', 6511),\n",
-       " (u'The', 1259),\n",
        " (u'``', 1128),\n",
        " (u\"''\", 1084),\n",
        " (u';', 510),\n",
@@ -1423,14 +1424,15 @@
        " (u'said', 454),\n",
        " (u'would', 424),\n",
        " (u'?', 384),\n",
-       " (u'I', 380),\n",
        " (u'one', 334),\n",
        " (u':', 303),\n",
-       " (u'He', 287),\n",
-       " (u'Mr.', 280)]"
+       " (u'Mr.', 280),\n",
+       " (u')', 266),\n",
+       " (u'(', 263),\n",
+       " (u'Mrs.', 262)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,13 +1443,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.3692414827512325"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean([x for x in counter.values()])"
    ]
   },
   {
@@ -1460,7 +1484,7 @@
     {
      "data": {
       "text/plain": [
-       "5.5960268427780147"
+       "1.0"
       ]
      },
      "execution_count": 14,
@@ -1469,29 +1493,7 @@
     }
    ],
    "source": [
-    "np.mean(counter.values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.median(counter.values())"
+    "np.median([x for x in counter.values()])"
    ]
   },
   {
